  CR: Generator: Added placeholder syntax for disposable structures
      Disposable structures are bound to their place and, unlike a normal
      structure/scope, can be defined differently multiple times, but cannot be
      reused or created or extracted based on their name.
      TODO: Add in Introduction.md
  CR: Generator: Added structures for single values
      TODO: Implementation

4.1.2 20220713
  BF: Build: Optimization of the release info process
  BF: Maven: Update of dependencies
  BF: Template: Correction for handling unexpected data type in data map
      e.g. Collection with Integer caused errors

4.1.1 20220327
  BF: Maven: Update of dependencies
      CVE-2020-36518
  BF: Build: Optimization of the release info process
  CR: OpenHtmlToPdf: Update to version 1.0.10
  CR: Releases only as attachments on the GitHub release page
      Otherwise the download during cloning will be too large.

4.1.0 20210924
  BF: Maven: Update of dependencies
  BF: Review: Optimization (code + tests)
  CR: OpenHtmlToPdf: Update to version 1.0.9
  CR: Java: Switch to version 11
  CR: Preview: Added argument/option/keyword/... @Resources
      In addition to paths/filters/globs, @Resources can also be used to scan the classpath.
      Without arguments @Resources is used as default.
      When using paths without @Resources, the classpath is not scanned.
  CR: Designer: Added argument/option/keyword/... @Resources
      In addition to paths/filters/globs, @Resources can also be used to scan the classpath.
      Without arguments @Resources is used as default.
      When using paths without @Resources, the classpath is not scanned.
  CR: Maven: Added static code analysis
  CR: Template: Optimization of @Resources, class need not be public

4.0.3 20200830
  BF: Service: Optimization of the code
  BF: Template: Correction/optimization of exists-placeholder
      Exists placeholders are only created if the value is not null, not empty and not blank.